--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0",
     "framework7": "^1.5.3",
-    "framework7-vue": "^0.8.5"
+    "framework7-vue": "^0.8.5",
+    "style-loader": "^0.13.0",
+    "vue-html-loader": "^1.0.0"
   },
   "engines": {
     "node": ">= 4.0.0",
